--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -191,13 +191,14 @@ month={Dec}
   title={Towards maintainability metrics on software architecture: An adaptation of object-oriented metrics},
   author={Bengtsson, PerOlof},
   booktitle={First Nordic Workshop on Software Architecture, Ronneby},
-  year={1998}
+  year={1998},
+  pages={87--91}
 }
 
 @article{Dubey:2011:AMM:2020976.2020983,
  author = {Dubey, Sanjay Kumar and Rana, Ajay},
  title = {Assessment of Maintainability Metrics for Object-oriented Software System},
- journal = {SIGSOFT Softw. Eng. Notes},
+ journal = {ACM SIGSOFT Software Engineering Notes},
  issue_date = {September 2011},
  volume = {36},
  number = {5},
@@ -233,7 +234,7 @@ month={Aug}
 @article{Binder:1994:DTO:182987.184077,
  author = {Binder, Robert V.},
  title = {Design for Testability in Object-oriented Systems},
- journal = {Commun. ACM},
+ journal = {Communications of the ACM.},
  issue_date = {Sept. 1994},
  volume = {37},
  number = {9},
@@ -244,7 +245,7 @@ month={Aug}
  numpages = {15},
  doi = {10.1145/182987.184077},
  acmid = {184077},
- publisher = {ACM},
+ publisher = {ACM.},
  address = {New York, NY, USA}
 } 
 
@@ -295,9 +296,8 @@ booktitle={Source Code Analysis and Manipulation, 2004. Fourth IEEE Internationa
 title={Predicting class testability using object-oriented metrics}, 
 year={2004}, 
 pages={136-145}, 
-keywords={Java;object-oriented methods;program testing;Java;class testability;object-oriented metrics;ISO standards;Java;Object oriented modeling;Programming;Software quality;Software systems;Software testing;Software tools;System testing;Writing}, 
-doi={10.1109/SCAM.2004.16}, 
-month={Sept}
+month={Sept},
+publisher={{IEEE.}}
 }
 
 @article{Freedman:1991:TSC:126218.126229,
@@ -353,7 +353,7 @@ month={Sept}
 	title = {Measuring and improving design patterns testability},
 	pages = {50--59},
 	booktitle = {Software Metrics Symposium, 2003. Proceedings. Ninth International},
-	publisher = {{IEEE}},
+	publisher = {{IEEE.}},
 	author = {Baudry, Benoit and Traon, Yves Le and Sunyé, Gerson and Jézéquel, Jean-Marc},
 	urldate = {2016-03-05},
 	year = {2003}
@@ -361,14 +361,12 @@ month={Sept}
 
 @inproceedings{baudry_testability_2002,
 	title = {Testability analysis of a {UML} class diagram},
-	doi = {10.1109/METRIC.2002.1011325},
-	abstract = {Design-for-testability is a very important issue in software engineering. It becomes crucial in the case of {OO} designs where control flows are generally not hierarchical, but are diffuse and distributed over the whole architecture. We concentrate on detecting, pinpointing and suppressing potential testability weaknesses of a {UML} class diagram. The attribute significant from design testability is called "class interaction": it appears when potentially concurrent client/supplier relationships between classes exist in the system. These interactions point out parts of the design that need to be improved, driving structural modifications or constraint specifications, to reduce the final testing effort.},
 	eventtitle = {Eighth {IEEE} Symposium on Software Metrics, 2002. Proceedings},
 	pages = {54--63},
 	booktitle = {Eighth {IEEE} Symposium on Software Metrics, 2002. Proceedings},
+	publisher = {{IEEE.}},
 	author = {Baudry, B. and Traon, Y. Le and Sunye, G.},
-	year = {2002},
-	keywords = {class interaction, Collaboration, Computer architecture, constraint specifications, control flows, Costs, design-for-testability, diagrams, formal specification, Life testing, object oriented designs, object-oriented programming, program testing, software architecture, Software design, Software Engineering, Software testing, specification languages, System testing, testability, {UML} class diagram, Unified modeling language}
+	year = {2002}
 }
 
 % arkkitehtuuriset hajut 
@@ -449,8 +447,7 @@ month={May}
  numpages = {3},
  doi = {10.1145/243327.243602},
  acmid = {243602},
- publisher = {ACM},
- address = {New York, NY, USA}
+ publisher = {ACM.}
 } 
 
 @inproceedings{joshi_design_2014,
@@ -490,18 +487,23 @@ month={May}
 	year = {2011}
 }
 
+
 @inproceedings{de_andrade_architectural_2014,
-	title = {Architectural bad smells in software product lines: an exploratory study},
-	isbn = {978-1-4503-2523-3},
-	doi = {10.1145/2578128.2578237},
-	shorttitle = {Architectural bad smells in software product lines},
-	pages = {1--6},
-	publisher = {{ACM} Press},
-	author = {de Andrade, Hugo Sica and Almeida, Eduardo and Crnkovic, Ivica},
-	urldate = {2016-03-05},
-	year = {2014},
-	langid = {english}
-}
+ author = {de Andrade, Hugo Sica and Almeida, Eduardo and Crnkovic, Ivica},
+ title = {Architectural Bad Smells in Software Product Lines: An Exploratory Study},
+ booktitle = {Proceedings of the WICSA 2014 Companion Volume},
+ series = {WICSA '14 Companion.},
+ year = {2014},
+ isbn = {978-1-4503-2523-3},
+ location = {Sydney, Australia},
+ pages = {12:1--12:6},
+ articleno = {12},
+ numpages = {6},
+ acmid = {2578237},
+ publisher = {ACM.},
+ keywords = {architectural bad smells, architecture, evaluation, exploratory study, software product lines},
+} 
+
 
 @incollection{garcia_toward_2009,
 	title = {Toward a catalogue of architectural bad smells},
@@ -541,7 +543,7 @@ month={May}
 	title = {Detecting architecturally-relevant code smells in evolving software systems},
 	pages = {1090--1093},
 	booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
-	publisher = {{ACM}},
+	publisher = {{ACM.}},
 	author = {Bertran, Isela Macia},
 	urldate = {2016-03-02},
 	year = {2011}
